syntax = "proto3";

package report;

// Service report đơn giản, chỉ 5 hàm
service ReportServiceProto {
  // 1) Thống kê số người đã đăng ký, checkin, checkout
  rpc GetEventParticipationStats (EventRequest) returns (EventParticipationStatsResponse) {}

  // 2) Lấy timeline checkin/checkout theo khung giờ
  rpc GetParticipationTimeline (EventRequest) returns (ParticipationTimelineResponse) {}

  // 3) Thống kê số lượt tham gia trong từng tháng (cho 1 năm)
  rpc GetMonthlyParticipationStats (MonthlyStatsRequest) returns (MonthlyParticipationStatsResponse) {}

  // 4) Phân tích thời điểm checkin/checkout trung bình
  rpc GetCheckInOutTimeAnalysis (EventRequest) returns (CheckInOutTimeAnalysisResponse) {}

  // 5) Tỷ lệ checkin/checkout (theo %) so với tổng
  rpc GetParticipationRate (EventRequest) returns (ParticipationRateResponse) {}
}

// ------ Request / Response định nghĩa ------

// Dùng chung cho những hàm cần eventId
message EventRequest {
  string eventId = 1;
}

// 1) Đếm participant: registeredCount, checkInCount, checkOutCount
message EventParticipationStatsResponse {
  string eventId = 1;
  int32 registeredCount = 2;
  int32 checkInCount = 3;
  int32 checkOutCount = 4;
}

// 2) Timeline checkin/checkout
message ParticipationTimelineResponse {
  repeated TimelinePoint timeline = 1;
}

message TimelinePoint {
  string timeSlot = 1;   // "00:00 - 00:59"
  int32 checkInCount = 2;
  int32 checkOutCount = 3;
}

// 3) Thống kê theo tháng
message MonthlyStatsRequest {
  int32 year = 1;
}

message MonthlyParticipationStatsResponse {
  repeated MonthlyParticipationStat monthlyStats = 1;
}

message MonthlyParticipationStat {
  int32 month = 1;
  int32 participantCount = 2;
}

// 4) Phân tích thời gian checkin, checkout trung bình (phút)
message CheckInOutTimeAnalysisResponse {
  double averageCheckInTimeInMinutes = 1;
  double averageCheckOutTimeInMinutes = 2;
}

// 5) Tỷ lệ checkIn / checkOut (phần trăm)
message ParticipationRateResponse {
  double checkInRate = 1;
  double checkOutRate = 2;
}
